test/corpus/statements/declMethod.txt
================================================================================
abstract method declaration
================================================================================
proto static native void foo();
--------------------------------------------------------------------------------
(compilation_unit
	(decl_method
		(method_modifier)
		(method_modifier)
		(method_modifier)
		return_type: (type_void)
		name: (identifier)))

================================================================================
concrete method declaration
================================================================================
void foo() {}
--------------------------------------------------------------------------------
(compilation_unit
	(decl_method
		return_type: (type_void)
		name: (identifier)
		body: (block)))

================================================================================
method declaration with parameters
================================================================================
override void foo(const int x = 69, inout int y, out int y) {}
--------------------------------------------------------------------------------
(compilation_unit
	(decl_method
		(method_modifier)
		return_type: (type_void)
		name: (identifier)
		(formal_parameters
			(formal_parameter
				(formal_parameter_modifier)
				type: (type_int)
				name: (identifier)
				default: (literal_int))
			(formal_parameter
				(formal_parameter_modifier)
				type: (type_int)
				name: (identifier))
			(formal_parameter
				(formal_parameter_modifier)
				type: (type_int)
				name: (identifier)))
		body: (block)))
